Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122968

QML Camera: Using zoom and switching cameras breaks the example

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.5.6, 6.7.1, 6.8.0 FF
    • 6.6.2, 6.7
    • Multimedia
    • None
    • Android
    • 496aec507 (dev), 7346e6e4d (dev), 81e345094 (6.7), ab2bb8469 (6.7), fe0acbf5d (6.6), 2e2dd0020 (6.6), 09f3a4728 (tqtc/lts-6.5), c0eab1244 (tqtc/lts-6.5)
    • 2024wk10FOQtforAndroid, 2024wk12FOQtforAndroid

      Switching cameras (rear to front camera) in photo mode after using zoom will freeze camera image, disable photo capture button. After this if mode is switched to video record button does not work.

      See linked video.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bartlomiejmoskal Bartlomiej Moskal
            jani-korteniemi Jani Korteniemi
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: