Android-ffmpeg: Clean up zoom value if it doesn't fit

In case of switching the camera device, it may happen that the currently
set zoom will be greater than the maximum possible value. In this case,
the zoom value need to be cleaned up.

Pick-to: 6.6 6.5
Fixes: QTBUG-122968
Change-Id: I3fd8842aa3c9e4da4dbd28b391cf4d5d63067858
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 7346e6e4d3afa45454031f13c4508ab3414f4a96)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>